# saros-dashboard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.claude/commands/opsx/: patch.md
.claude/skills/screenshots/: SKILL.md
deploy/: vacuum-dashboard.service
docs/: scheduler-reliability-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionsPanel.tsx  CleanRoomsPanel.tsx  CleanSettingsPanel.tsx  ConnectivityBanner.tsx  ConsumablesPanel.tsx  EditModal.tsx  HistoryPanel.tsx  Panel.tsx  RoutinesPanel.tsx  SchedulePanel.tsx  StatusBar.tsx  StatusPanel.tsx  TriggerModal.tsx  TriggersPanel.tsx  WindowPlannerPanel.tsx
frontend/src/lib/: api.ts
openspec/changes/both-mode-dispatch/: design.md  proposal.md  tasks.md
openspec/changes/cleaning-profiles/: design.md  proposal.md  tasks.md
openspec/changes/connectivity-quick-wins/: design.md  proposal.md  tasks.md
openspec/changes/dashboard-health-poller/: design.md  tasks.md
openspec/changes/dashboard-request-throttling/: tasks.md
openspec/changes/github-publish-prep/: tasks.md
openspec/changes/history-reconciliation/: design.md  proposal.md  tasks.md
openspec/changes/schedule-first-ui-redesign/: design.md  proposal.md  tasks.md
openspec/changes/smarter-reconnect/: design.md  proposal.md  tasks.md
openspec/specs/clean-scheduler/: spec.md
openspec/specs/clean-windows/: spec.md
openspec/specs/cli/: spec.md
scripts/: dev.sh  install-service.sh  screenshots.mjs
src/vacuum/: __init__.py  cli.py  client.py  config.py  dashboard.py  mcp_server.py  routines.py  scheduler.py
(+126 files in other folders)
